--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title> Calculator </title>
+        <script src="style.css"></script>
     </head>
     <body>
         <div class="calc-body">
