Add calculator file

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
 
 		<!-- Calculator Body -->
-		<div class="calc-body">
+		<div class="body">
 			<!-- Calculator Display Screen -->
-			<div class="calc-screen">
-				<div id="calc-operation">123 + 456 = </div>
-				<div id="calc-typed">579</div>
+			<div class="screen">
+				<div id="operation">123 + 456 = </div>
+				<div id="typed">579</div>
 			</div>
 			<!-- Calculator Buttons -->
-			<div class="calc-button-row">
+			<div class="button-row">
 				<button class="ac">AC</button>
 				<button class="opt">&#43;&#47;&#8722;</button>
 				<button class="opt">&#37;</button>
