Add changes via upload

--- a/index.html
+++ b/index.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <html>
 <head>
-	<title>JavaScript Simple Calculator Program Demo</title>
+
+	<title>JavaScript Simple Calculator</title>
 	<link rel="shortcut icon" href=https://www.w3schools.in/asset/img/favicon-32x32.png type=image/png>
 	<link rel="stylesheet" href="../asset/node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../asset/app.css">
-	<style>
-		/*Calculator Body*/
-		
-	</style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
-		<!-- Calculator Body -->
 		<div class="body">
-			<!-- Calculator Display Screen -->
-			<div class="screen">
-				<div id="operation">123 + 456 = </div>
-				<div id="typed">579</div>
+			<div class="calc-screen">
+				<div id="calc-operation">123 + 456 = </div>
+				<div id="calc-typed">579</div>
 			</div>
-			<!-- Calculator Buttons -->
-			<div class="button-row">
+
+			<div class="calc-button-row">
 				<button class="ac">AC</button>
 				<button class="opt">&#43;&#47;&#8722;</button>
 				<button class="opt">&#37;</button>
