--- a/index.html
+++ b/index.html
@@ -1,45 +1,107 @@
-
+<!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
-
-	<title>JavaScript Simple Calculator</title>
-	<link rel="shortcut icon" href=https://www.w3schools.in/asset/img/favicon-32x32.png type=image/png>
-	<link rel="stylesheet" href="../asset/node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../asset/app.css">
-  <link rel="stylesheet" href="style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-		<div class="body">
-			<div class="calc-screen">
-				<div id="calc-operation">123 + 456 = </div>
-				<div id="calc-typed">579</div>
-			</div>
+    <!-- Calculator Body -->
+    <div class="calc-body">
+        <!-- Calculator Display Screen -->
+        <div class="calc-screen">
+            <div id="calc-operation"></div>
+            <div id="calc-typed">0</div>
+        </div>
+        <!-- Calculator Buttons -->
+        <div class="calc-button-row">
+            <button class="ac">AC</button>
+            <button class="opt" data-operator="+">+</button>
+            <button class="opt" data-operator="-">-</button>
+            <button class="opt" data-operator="*">&#215;</button>
+            <button class="opt" data-operator="/">÷</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button>.</button>
+            <button class="equal">&#61;</button>
+        </div>
+    </div>
 
-			<div class="calc-button-row">
-				<button class="ac">AC</button>
-				<button class="opt">&#43;&#47;&#8722;</button>
-				<button class="opt">&#37;</button>
-				<button class="opt">&#247;</button>
-				<button>7</button>
-				<button>8</button>
-				<button>9</button>
-				<button class="opt">&#215;</button>
-				<button>4</button>
-				<button>5</button>
-				<button>6</button>
-				<button class="opt">&#8722;</button>
-				<button>1</button>
-				<button>2</button>
-				<button>3</button>
-				<button class="opt">&#43;</button>
-				<button>0</button>
-				<button>.</button>
-				<button>&#9003;</button>
-				<button class="opt">&#61;</button>
-			</div>
-		</div>
-	</div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const calcOperation = document.getElementById('calc-operation');
+            const calcTyped = document.getElementById('calc-typed');
+            let currentOperation = '';
+            let currentNumber = '';
+
+            // Clear the screen
+            function clearScreen() {
+                currentOperation = '';
+                currentNumber = '';
+                updateScreen();
+            }
+
+            // Update the screen with current values
+            function updateScreen() {
+                calcOperation.textContent = currentOperation;
+                calcTyped.textContent = currentNumber || '0';
+            }
+
+            // Handle number button click
+            function handleNumberClick(number) {
+                currentNumber += number;
+                updateScreen();
+            }
+
+            // Handle operator button click
+            function handleOperatorClick(operator) {
+                if (currentNumber !== '') {
+                    currentOperation += currentNumber + ' ' + operator + ' ';
+                    currentNumber = '';
+                    updateScreen();
+                }
+            }
+
+            // Handle equal button click
+            function handleEqualClick() {
+                if (currentNumber !== '') {
+                    currentOperation += currentNumber;
+                    const result = eval(currentOperation);
+                    currentOperation = '';
+                    currentNumber = result.toString();
+                    updateScreen();
+                }
+            }
+
+            // Attach click event listeners to buttons
+            document.querySelectorAll('.calc-button-row button').forEach(button => {
+                button.addEventListener('click', () => {
+                    const value = button.textContent;
+                    if (!isNaN(parseInt(value))) {
+                        handleNumberClick(value);
+                    } else if (value === '.') {
+                        if (!currentNumber.includes('.')) {
+                            handleNumberClick(value);
+                        }
+                    } else if (value === 'AC') {
+                        clearScreen();
+                    } else if (value === '=') {
+                        handleEqualClick();
+                    } else {
+                        handleOperatorClick(value);
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
