--- a/index.html
+++ b/index.html
@@ -21,87 +21,19 @@
             <button class="opt" data-operator="-">-</button>
             <button class="opt" data-operator="*">&#215;</button>
             <button class="opt" data-operator="/">÷</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>0</button>
-            <button>.</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">0</button>
+            <button class="number">.</button>
             <button class="equal">&#61;</button>
         </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const calcOperation = document.getElementById('calc-operation');
-            const calcTyped = document.getElementById('calc-typed');
-            let currentOperation = '';
-            let currentNumber = '';
-
-            // Clear the screen
-            function clearScreen() {
-                currentOperation = '';
-                currentNumber = '';
-                updateScreen();
-            }
-
-            // Update the screen with current values
-            function updateScreen() {
-                calcOperation.textContent = currentOperation;
-                calcTyped.textContent = currentNumber || '0';
-            }
-
-            // Handle number button click
-            function handleNumberClick(number) {
-                currentNumber += number;
-                updateScreen();
-            }
-
-            // Handle operator button click
-            function handleOperatorClick(operator) {
-                if (currentNumber !== '') {
-                    currentOperation += currentNumber + ' ' + operator + ' ';
-                    currentNumber = '';
-                    updateScreen();
-                }
-            }
-
-            // Handle equal button click
-            function handleEqualClick() {
-                if (currentNumber !== '') {
-                    currentOperation += currentNumber;
-                    const result = eval(currentOperation);
-                    currentOperation = '';
-                    currentNumber = result.toString();
-                    updateScreen();
-                }
-            }
-
-            // Attach click event listeners to buttons
-            document.querySelectorAll('.calc-button-row button').forEach(button => {
-                button.addEventListener('click', () => {
-                    const value = button.textContent;
-                    if (!isNaN(parseInt(value))) {
-                        handleNumberClick(value);
-                    } else if (value === '.') {
-                        if (!currentNumber.includes('.')) {
-                            handleNumberClick(value);
-                        }
-                    } else if (value === 'AC') {
-                        clearScreen();
-                    } else if (value === '=') {
-                        handleEqualClick();
-                    } else {
-                        handleOperatorClick(value);
-                    }
-                });
-            });
-        });
-    </script>
 </body>
 </html>
